--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -1,3 +1,55 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .key {
+    @apply border rounded-md shadow-md flex justify-center items-end;
+  }
+
+  .key-white {
+    @apply h-64 w-10;
+  }
+
+  .key-white-unselected {
+    @apply bg-white border-gray-400 text-gray-800;
+  }
+  .key-white-unselected:hover {
+    @apply bg-purple-100 border-purple-200 text-purple-800;
+  }
+  .key-white-selected {
+    @apply bg-orange-400 border-orange-500 text-orange-900;
+  }
+  .key-white-selected:hover {
+    @apply bg-orange-300 border-orange-400 text-orange-800;
+  }
+  .key-white-root {
+    @apply bg-blue-400 border-blue-500 text-blue-900;
+  }
+  .key-white-root:hover {
+    @apply bg-blue-300 border-blue-400 text-blue-800;
+  }
+
+  .key-black {
+    @apply h-40 w-6 -mx-3 z-10;
+  }
+
+  .key-black-unselected {
+    @apply bg-gray-800 border-gray-900;
+  }
+  .key-black-unselected:hover {
+    @apply bg-purple-900 border-gray-900;
+  }
+  .key-black-selected {
+    @apply bg-orange-800 border-orange-900;
+  }
+  .key-black-selected:hover {
+    @apply bg-orange-700 border-orange-800;
+  }
+  .key-black-root {
+    @apply bg-blue-800 border-blue-900;
+  }
+  .key-black-root:hover {
+    @apply bg-blue-700 border-blue-800;
+  }
+}
