--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -63,4 +63,12 @@
   .menu-item:hover {
     @apply bg-purple-100 border-purple-200 text-purple-800;
   }
+
+  .btn {
+    @apply px-4 py-1 border rounded-2xl text-sm font-bold text-white tracking-widest bg-blue-600 border-blue-700;
+  }
+
+  .btn:hover {
+    @apply bg-blue-500 border-blue-600;
+  }
 }
