--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -58,7 +58,7 @@
   }
 
   .menu-item {
-    @apply px-4 py-2 border-t border-b border-transparent;
+    @apply px-4 py-2 border-t border-b border-transparent cursor-default;
   }
   .menu-item:hover {
     @apply bg-purple-100 border-purple-200 text-purple-800;
