--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -71,4 +71,20 @@
   .btn:hover {
     @apply bg-blue-500 border-blue-600;
   }
+
+  .icon {
+    @apply p-2 border-2 rounded-lg border-transparent;
+  }
+
+  .icon:hover {
+    @apply text-blue-600;
+  }
+
+  .icon:focus {
+    @apply outline-none;
+  }
+
+  .icon:focus-visible {
+    @apply border-blue-200 text-blue-600 shadow;
+  }
 }
