--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -87,4 +87,16 @@
   .icon:focus-visible {
     @apply border-blue-200 text-blue-600 shadow;
   }
+
+  .mode-block {
+    @apply m-2 border-2 border-transparent rounded-lg;
+  }
+
+  .mode-block:focus {
+    @apply outline-none;
+  }
+
+  .mode-block:focus-visible {
+    @apply border-blue-200 shadow-md bg-blue-200;
+  }
 }
