--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -76,4 +76,8 @@
   .tab-selection:focus-visible {
     @apply border-blue-200 shadow;
   }
+
+  .mode-card {
+    @apply text-gray-800 relative flex flex-col py-8 items-center w-full max-w-md m-auto border border-gray-400 bg-white rounded-lg shadow-xl;
+  }
 }
