--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -1,5 +1,20 @@
 @tailwind base;
 @tailwind components;
+
+@font-face {
+  font-family: 'FreeSans';
+  src: url(./fonts/FreeSans-LrmZ.ttf);
+  font-style: normal;
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: 'FreeSans';
+  src: url(./fonts/FreeSansBold-Xgdd.ttf);
+  font-style: normal;
+  font-weight: 600;
+}
+
 @tailwind utilities;
 
 @layer components {
