--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -18,6 +18,7 @@
 @tailwind utilities;
 
 @layer components {
+  /* KEYS */
   .key {
     @apply border rounded-md shadow-md flex flex-col justify-end items-center;
   }
@@ -74,18 +75,20 @@
     @apply bg-blue-700 border-blue-800 text-blue-100;
   }
 
+  /* DIVS */
+  .box {
+    @apply bg-white border border-gray-400 rounded-lg;
+  }
+
+  .pop-out {
+    @apply border-gray-500 shadow-xl;
+  }
+
   .drop-down {
-    @apply absolute flex flex-col right-0 z-20 font-semibold bg-white border border-gray-500 rounded-lg shadow-xl;
+    @apply absolute right-0 z-20;
   }
 
-  .btn {
-    @apply px-4 py-1 border rounded-2xl text-sm font-bold text-white tracking-widest bg-blue-600 border-blue-700;
-  }
-
-  .btn:hover {
-    @apply bg-blue-500 border-blue-600;
-  }
-
+  /* TAB-SELECTION */
   .tab-selection {
     @apply border-2 rounded-lg border-transparent;
   }
@@ -98,7 +101,12 @@
     @apply border-blue-200 shadow;
   }
 
-  .mode-card {
-    @apply text-gray-800 relative flex flex-col py-6 items-center w-full max-w-md m-auto border border-gray-400 bg-white rounded-lg shadow-xl;
+  /* BUTTONS */
+  .btn {
+    @apply px-4 py-1 border rounded-2xl text-sm font-bold text-white tracking-widest bg-blue-600 border-blue-700;
+  }
+
+  .btn:hover {
+    @apply bg-blue-500 border-blue-600;
   }
 }
